[package]
name = "rust-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
blowfish = { version = "0.9.1", features = ["bcrypt"] }
clap = { version = "4.4.7", features = ["derive"] }
crc32fast = "1.3.2"
indexmap = "2.0.2"
num-bigint = "0.4.4"
thiserror = "1.0.49"
wild = "2.2.0"

[[bin]]
name = "mixer"
path = "src/tools/mixer.rs"

[[bin]]
name = "stringer"
path = "src/tools/stringer.rs"
